# legalassistantback

./: .gitignore  README.md  app.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ec398c0cbc12_init.py
src/ai/: agent.py  config.py  prompt.py  tools.py
src/ai/tools/: similarity_search.py  web_search.py
src/api/: api.py
src/api/auth/: auth.py
src/api/chat/: chat.py  thread.py  threads.py
src/api/payments/: subscription.py
src/api/v1/: api.py
src/api/v1/auth/: auth.py
src/api/v1/chat/: chat.py  thread.py  threads.py  utils.py
src/cache/: redis.py
src/cron_jobs/: payments.py  users.py
src/database/: base.py  checkpointer.py  config.py  password_resets.py  payments.py  plans.py  reactions.py  refresh_tokens.py  session.py  subscriptions.py  users.py  utils.py
src/middleware/: auth_middleware.py
src/schema/: auth.py  chat.py  payments.py
src/services/: auth_service.py  chat_service.py  email_service.py  liqpay_client.py
